@@ -1,5 +1,6 @@
 ChangeLog
 examples/mkzip.pl
+examples/test-syle.pl
 Makefile.PL
 MANIFEST
 META.yml			Module meta-data (added by MakeMaker)
@@ -10,7 +11,8 @@ PANT/Zip.pm
 README
 t/basic.t
 t/cvs.t
-t/fake.t
+t/fake/fake.t
+t/fake/fake2.t
 t/ptest.t
 t/subpant.t
 t/updatefile.t
